<resources>
    <string name="ko_image_description">This is a image!</string>
    <string name="ko_crash_info">Oh~~Application is terminated.</string>
    <string name="ko_network_default_wifi_name">WIFI</string>
    <string name="ko_network_default_ethernet_name">Ethernet</string>
    <string name="ko_network_default_2G_name">2G</string>
    <string name="ko_network_default_3G_name">3G</string>
    <string name="ko_network_default_4G_name">4G</string>
    <string name="ko_network_default_pppoe">PPPOE</string>
    <string name="ko_network_not_available">Network Not Available</string>
    <string name="ko_zip_fail_exception_caught">Error occurred in zip processing.</string>
    <string name="ko_zip_fail_file_can_not_read">Unable to read from input file, zip-process stoped.</string>
    <string name="ko_zip_fail_out_of_space">Out of disk space, zip-process stoped.</string>
    <string name="ko_unsurport_file">File is not supported</string>
    <string name="ko_common_storage_name_local">Local</string>
    <string name="ko_common_storage_name_sdcard">SD_%02d</string>
    <string name="ko_common_storage_name_usb">USB_%02d</string>
    <string name="ko_network_req_failed">Network request failed!</string>
    <string name="ko_network_req_time_out">Request network time out, try again later!</string>
    <string name="ko_network_resp_error_region_country_unavailable">Your country or region is unavailable for requesting these information.</string>
    <string name="ko_server_busy">Server is busy,access to server data failed!(errorcode=%1$d)</string>
    <string name="ko_no_focus_tag">KO_NO_FOCUS</string>
    <string name="ko_task_status_waiting">Waiting</string>
    <string name="ko_task_status_running">Downloading</string>
    <string name="ko_task_status_paused">Paused</string>
    <string name="ko_task_status_success">Success</string>
    <string name="ko_task_status_failed">Failed</string>
    <string name="ko_task_status_deleted">Deleted</string>
    <string name="ko_task_status_ready">Ready</string>
    <string name="ko_downloadengine_error_default">Download Engine encountered an internal error(%1$d)!</string>
    <string name="ko_downloadengine_error_invalid_task">Invalid Task!</string>
    <string name="ko_downloadengine_error_etm_out_of_memory">Download Engine is out of memory!</string>
    <string name="ko_downloadengine_error_task_already_exist">This Task is already exist!</string>
    <string name="ko_downloadengine_error_file_already_exist">This File is already exist!</string>
    <string name="ko_downloadengine_error_game_already_exist">This Game is already exist!</string>
    <string name="ko_http_downloadengine_error_default">Download Engine encountered an internal error(%1$d)!</string>
    <string name="ko_http_downloadengine_error_insufficient_disk_space">Insufficient Disk Space</string>
    <string name="ko_http_downloadengine_error_cid_check_fail">File check failed</string>
    <string name="ko_http_downloadengine_error_io_exception">IO Exception</string>
    <string name="ko_http_downloadengine_error_http_url_noresponse">URL no response</string>
    <string name="ko_app_name">KOBattleChannel</string>
    <string name="ko_bnet_msg_waiting_tired">Be quick! I am so bored…</string>
    <string name="ko_hello">Hello World, PpssppActivity!</string>
    <string name="ko_shortcut_name">PPSSPP game</string>
    <string name="ko_emu_game_is_unavailable">The game file is unavailable</string>
    <string name="ko_load_rom_failed">Load game failed. Please try another file.</string>
    <string name="ko_load_libs_failed">Game dependent files ready to fail!</string>
    <string name="ko_rom_not_supported">Game file is not supported.</string>
    <string name="ko_rom_not_exist">Game file lost!</string>
    <string name="ko_quit_game_title">Quit</string>
    <string name="ko_load_state_title">Load Game</string>
    <string name="ko_load_state_success">Load game successfully</string>
    <string name="ko_load_state_fail">Load game failed</string>
    <string name="ko_save_state_title">Save Game</string>
    <string name="ko_audio_settings">Audio settings</string>
    <string name="ko_enable_sound">Enable sound</string>
    <string name="ko_sound_volume">Volume</string>
    <string name="ko_video_settings">Video settings</string>
    <string name="ko_scaling_mode">Scaling mode</string>
    <string name="ko_aspect_ratio">Aspect ratio</string>
    <string name="ko_fast_forward_speed">Fast forward speed</string>
    <string name="ko_frame_skip_settings">Frame skip settings</string>
    <string name="ko_frame_skip_mode">Frame skip mode</string>
    <string name="ko_max_frame_skips">Max frame skips</string>
    <string name="ko_max_frame_skips_summary">Maximum number of consecutive frame skips</string>
    <string name="ko_refresh_rate">Screen refresh rate</string>
    <string name="ko_auto_frame_skip">Automatic frame skip</string>
    <string name="ko_settings_title">Setting</string>
    <string name="ko_audio_video_settings">Audio video settings</string>
    <string name="ko_accurate_rendering">Accurate rendering</string>
    <string name="ko_accurate_rendering_summary">May reduce speed!</string>
    <string name="ko_refresh_rate_summary">MOTO Droid 2.1 should set to 30！</string>
    <string name="ko_accurate_rendering_prompt">Take effect after restart</string>
    <string name="ko_global_model">Global model</string>
    <string name="ko_asm_cpu_cores_sumary">Use the compatibility list, compatible with a variety of processors, can obtain better performance, but reduces compatibility may reduce speed!</string>
    <string name="ko_video_rendering_mode">Video rendering mode</string>
    <string name="ko_sound_thread">Sound thread</string>
    <string name="ko_sound_thread_sumary">Separate open voice thread can get softer voice, but also will affect the game fluency</string>
    <string name="ko_power_model">Power saving mode</string>
    <string name="ko_power_model_sumary">Some devices open set power-saving mode to save power</string>
    <string name="ko_display_mode">Landscape display Settings</string>
    <string name="ko_zoom_model">Zoom model</string>
    <string name="ko_smoothing_model">Smoothing model</string>
    <string name="ko_smoothing_model_sumary">Make the image more smooth</string>
    <string name="ko_windows_model">Windows model</string>
    <string name="ko_windows_model_sumary">Play a game without sunscreen</string>
    <string name="ko_required_libs_are_missed">Miss required components to run emulator!</string>
    <string name="ko_config_activity_default_bg_file_name">home_default_bg.jpg</string>
    <string name="ko_imageview">imageview</string>
    <string name="ko_gamepad_connected">Game Pad %1$s is connected.</string>
    <string name="ko_gamepad_quited">Game Pad %1$s is disconnected.</string>
    <string name="ko_recommend">HOT</string>
    <string name="ko_category">CATEGORIES</string>
    <string name="ko_special">SERIES</string>
    <string name="ko_new_game">NEW</string>
    <string name="ko_my">MY CENTER</string>
    <string name="ko_me">me</string>
    <string name="ko_you">you</string>
    <string name="ko_waiting">Waiting…</string>
    <string name="ko_setting">SETTINGS</string>
    <string name="ko_game_details">Game Details</string>
    <string name="ko_online_time">Online:%1$s</string>
    <string name="ko_my_game">My Games</string>
    <string name="ko_my_game_head">Total%1$sGames</string>
    <string name="ko_game_manage">Game Manager</string>
    <string name="ko_my_hand">Gamepads</string>
    <string name="ko_more_setting">More Settings</string>
    <string name="ko_available_space">Free:%1$s</string>
    <string name="ko_storage_space">Storages</string>
    <string name="ko_storage_head">Total %1$s Storages</string>
    <string name="ko_local_storage">Local</string>
    <string name="ko_is_default_location">Default</string>
    <string name="ko_set_default_location">Set to default storage</string>
    <string name="ko_prompt">prompt</string>
    <string name="ko_set_default_location_succeed">Set default storage successfully！</string>
    <string name="ko_add_game_prompt">"For quick start，
add shortcut to “My Games“!"</string>
    <string name="ko_confirm_add">Add Now</string>
    <string name="ko_cancel_add">Next Time</string>
    <string name="ko_add_succeed">Add shortcut to “My Games“ successfully！</string>
    <string name="ko_press_quit">Press “quit“ again to quit</string>
    <string name="ko_data_error">Get data error!</string>
    <string name="ko_quit_prompt">Are you sure you want to quit?</string>
    <string name="ko_game_contact_info">Fans QQ Group:320086294 / Corperation:2629962501</string>
    <string name="ko_network_connect_fail">Network connection failed, please check your network！</string>
    <string name="ko_network_is_required_to_next_action">Network is required to do the next action！</string>
    <string name="ko_quit_prompt_hasdownload">Some of download tasks are not completed，are you sure you want to quit?</string>
    <string name="ko_quit_do_download">Quit but download still</string>
    <string name="ko_quit_app">Quit</string>
    <string name="ko_back">Back</string>
    <string name="ko_quit">Quit</string>
    <string name="ko_try_again">Try Again</string>
    <string name="ko_delete">Delete</string>
    <string name="ko_finish_game_download">%1$s download completed!</string>
    <string name="ko_finish_game_install">%1$s installation completed!</string>
    <string name="ko_install_game_fail">Installation failed！%1$s</string>
    <string name="ko_request_game_info_failed">Fail to get gamedata!(id=%1$s)</string>
    <string name="ko_press_any_key_to_enter">Press Any Key to skip</string>
    <string name="ko_loading_config">Loading Config···</string>
    <string name="ko_loading_images">Loading Images%1$s</string>
    <string name="ko_data_loading">Loading …</string>
    <string name="ko_net_not_good_data_load_fail">Network error，fail to load data…</string>
    <string name="ko_no_net_data_load_fail">Network error，fail to load data…</string>
    <string name="ko_gamepad_is_bnet_playing">please exit the battle before switching game</string>
    <string name="ko_loading_data_failed">Updating data failed！</string>
    <string name="ko_loading_libs_btn_tips">Updating support data</string>
    <string name="ko_loading_libs_btn_tips_progress">Updating support data%1$s%%</string>
    <string name="ko_loading_libs_act_tip1">Updating support data</string>
    <string name="ko_cancel_download_so_promit">Cancel download support data？</string>
    <string name="ko_continue_game">Continue</string>
    <string name="ko_keymapping">Key-Mapping</string>
    <string name="ko_save_archive">Save Archive</string>
    <string name="ko_read_archive">Load Save</string>
    <string name="ko_advanced_setting">Advanced Setting</string>
    <string name="ko_quit_game">Quit</string>
    <string name="ko_setting_about_us_tag">About KOBox</string>
    <string name="ko_setting_about_us_title">KO GameBox</string>
    <string name="ko_setting_about_us_version">(Current Version : %s)</string>
    <string name="ko_setting_about_us_business_coop">Cooperation : 2629962501 (QQ)</string>
    <string name="ko_setting_about_us_qq_group">Fans Group : 320086294 (QQ)</string>
    <string name="ko_setting_about_us_official_website">Official Website : tv.vszone.cn</string>
    <string name="ko_setting_about_us_weixin">WeChat : KOgames (Scan QR Code on right)</string>
    <string name="ko_my_account_win">Win:%1$d</string>
    <string name="ko_my_account_lose">Lose:%1$d</string>
    <string name="ko_my_account_same">Same:%1$d</string>
    <string name="ko_my_account_online_time">Online Time:%1$s</string>
    <string name="ko_no_ranking">No Ranking.</string>
    <string name="ko_battle_QRCode_tips_name">KO电视游戏助手</string>
    <string name="ko_battle_QRCode_tips_none">没有手柄也能玩</string>
    <string name="ko_battle_QRCode_tips_download">立即扫描下载</string>
</resources>