<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/ko_black_per50" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_size58px" android:textStyle="bold" android:textColor="@color/ko_font_dark_black_alpha60" android:gravity="center" android:id="@id/setting_about_us_tv_title" android:background="@drawable/ko_grey_shape" android:paddingLeft="@dimen/setting_about_us_tv_title_padding_30px" android:paddingRight="@dimen/setting_about_us_tv_title_padding_30px" android:layout_width="wrap_content" android:layout_height="@dimen/setting_about_us_tv_title_90px" android:layout_marginTop="@dimen/setting_about_us_tv_title_margin_top_60px" android:text="@string/ko_setting_about_us_tag" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <RelativeLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/setting_about_us_frame_margin_top_250px" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <ImageView android:id="@id/setting_about_us_iv_logo" android:layout_width="@dimen/setting_about_us_iv_logo_240px" android:layout_height="@dimen/setting_about_us_iv_logo_240px" android:contentDescription="@string/ko_imageview" />
        <LinearLayout android:orientation="vertical" android:id="@id/setting_about_us_lyt_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/setting_about_us_content_margin_left_75px" android:layout_toRightOf="@id/setting_about_us_iv_logo">
            <TextView android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@color/ko_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ko_setting_about_us_title" />
            <TextView android:textSize="@dimen/font_size32px" android:textColor="@color/ko_white" android:id="@id/setting_about_us_tv_version" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_about_us_tv_margin_top_30px" android:text="@string/ko_setting_about_us_version" />
            <TextView android:textSize="@dimen/font_size42px" android:textColor="@color/ko_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_about_us_tv_margin_top_30px" android:text="@string/ko_setting_about_us_business_coop" />
            <TextView android:textSize="@dimen/font_size42px" android:textColor="@color/ko_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_about_us_tv_margin_top_30px" android:text="@string/ko_setting_about_us_qq_group" />
            <TextView android:textSize="@dimen/font_size42px" android:textColor="@color/ko_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_about_us_tv_margin_top_30px" android:text="@string/ko_setting_about_us_official_website" />
            <TextView android:textSize="@dimen/font_size42px" android:textColor="@color/ko_white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/setting_about_us_tv_margin_top_30px" android:text="@string/ko_setting_about_us_weixin" />
        </LinearLayout>
        <ImageView android:id="@id/setting_about_us_iv_qr_code" android:layout_width="@dimen/setting_about_us_iv_qr_code_420px" android:layout_height="@dimen/setting_about_us_iv_qr_code_420px" android:layout_marginLeft="@dimen/setting_about_us_iv_qr_code_margin_left_130px" android:layout_toRightOf="@id/setting_about_us_lyt_about" android:contentDescription="@string/ko_imageview" />
    </RelativeLayout>
</RelativeLayout>