<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/score_item_iv_game_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:src="@drawable/ko_icon_logo" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:contentDescription="@string/ko_accurate_rendering" />
    <TextView android:textSize="@dimen/font_size36px" android:id="@id/score_item_tv_game_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginTop="10.0dip" android:text="拳皇97" android:layout_toRightOf="@id/score_item_iv_game_icon" android:layout_alignTop="@id/score_item_iv_game_icon" />
    <TextView android:textSize="@dimen/font_size36px" android:id="@id/score_item_tv_win" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ko_my_account_win" android:layout_toRightOf="@id/score_item_iv_game_icon" android:layout_alignBottom="@id/score_item_iv_game_icon" />
    <TextView android:textSize="@dimen/font_size36px" android:id="@id/score_item_tv_lose" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ko_my_account_lose" android:layout_toRightOf="@id/score_item_tv_win" android:layout_alignBottom="@id/score_item_iv_game_icon" />
    <TextView android:textSize="@dimen/font_size36px" android:id="@id/score_item_tv_same" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ko_my_account_same" android:layout_toRightOf="@id/score_item_tv_lose" android:layout_alignBottom="@id/score_item_iv_game_icon" />
    <TextView android:textSize="@dimen/font_size36px" android:id="@id/score_item_tv_online_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" android:layout_marginRight="30.0dip" android:layout_marginBottom="10.0dip" android:text="@string/ko_my_account_online_time" android:layout_toRightOf="@id/score_item_tv_same" android:layout_alignBottom="@id/score_item_iv_game_icon" />
</RelativeLayout>