<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_size58px" android:textColor="@color/ko_font_dark_black_alpha60" android:gravity="center" android:id="@id/prompt_dialog_tv_title" android:background="@drawable/ko_grey_shape" android:paddingLeft="@dimen/prompt_dialog_title_padding_left_45px" android:paddingRight="@dimen/prompt_dialog_title_padding_right_45px" android:layout_width="wrap_content" android:layout_height="@dimen/prompt_dialog_title_height_90px" android:layout_marginTop="@dimen/prompt_dialog_title_margin_top_90px" android:text="@string/ko_prompt" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/prompt_dialog_margin_top_228px" android:layout_alignParentTop="true" android:layout_centerHorizontal="true">
        <TextView android:textSize="@dimen/font_size72px" android:textStyle="bold" android:textColor="@color/ko_font_white" android:gravity="center_horizontal" android:id="@id/prompt_dialog_tv_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/prompt_dialog_tv_margin_bottom_30px" android:text="@string/ko_quit_prompt" android:layout_centerHorizontal="true" style="@style/KoTextStyle" />
        <TextView android:textSize="@dimen/font_size42px" android:textColor="@color/ko_font_white" android:id="@id/prompt_dialog_tv_message_detail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/prompt_dialog_tv_margin_bottom_30px" android:text="@string/ko_game_contact_info" android:layout_below="@id/prompt_dialog_tv_message" android:layout_centerHorizontal="true" style="@style/KoTextStyle" />
        <cn.vszone.ko.tv.views.KoButton android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:id="@id/quit_dialog_bt_quitdownload" android:background="@drawable/ko_prompt_dialog_bt_bg" android:visibility="visible" android:layout_width="@dimen/prompt_dialog_kobutton_width_882px" android:layout_height="@dimen/prompt_dialog_kobutton_height_150px" android:layout_marginTop="@dimen/prompt_dialog_tv_margin_bottom_30px" android:text="@string/ko_quit_do_download" android:layout_below="@id/prompt_dialog_tv_message_detail" android:layout_centerHorizontal="true" />
        <cn.vszone.ko.tv.views.KoButton android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:id="@id/quit_dialog_bt_quit" android:background="@drawable/ko_prompt_dialog_bt_bg" android:visibility="visible" android:layout_width="@dimen/prompt_dialog_kobutton_width_882px" android:layout_height="@dimen/prompt_dialog_kobutton_height_150px" android:layout_marginTop="@dimen/prompt_dialog_tv_margin_bottom_30px" android:text="@string/ko_quit_app" android:layout_below="@id/quit_dialog_bt_quitdownload" android:layout_centerHorizontal="true" />
        <cn.vszone.ko.tv.views.KoButton android:textSize="@dimen/font_size64px" android:textStyle="bold" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:id="@id/quit_dialog_bt_cancel" android:background="@drawable/ko_prompt_dialog_bt_bg" android:visibility="visible" android:layout_width="@dimen/prompt_dialog_kobutton_width_882px" android:layout_height="@dimen/prompt_dialog_kobutton_height_150px" android:layout_marginTop="@dimen/prompt_dialog_tv_margin_bottom_30px" android:text="@string/ko_back" android:layout_below="@id/quit_dialog_bt_quit" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/prompt_dialog_iv_qrcode" android:focusable="false" android:clickable="false" android:layout_width="@dimen/prompt_dialog_qrcode_width_280px" android:layout_height="@dimen/prompt_dialog_qrcode_width_330px" android:layout_marginLeft="@dimen/prompt_dialog_qrcode_margin_left_140px" android:layout_marginTop="@dimen/prompt_dialog_tv_margin_bottom_30px" android:layout_toRightOf="@id/quit_dialog_bt_quit" android:layout_below="@id/prompt_dialog_tv_message_detail" android:contentDescription="@string/ko_imageview" />
    </RelativeLayout>
</RelativeLayout>