<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/logoIv" android:layout_width="@dimen/emu_menu_image_width_512px" android:layout_height="@dimen/emu_menu_image_height_170px" android:layout_marginTop="@dimen/emu_menu_image_left_20px" android:contentDescription="@string/ko_app_name" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/emu_menu_focusview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/logoIv">
        <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size58px" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/emu_menu_continue" android:background="@drawable/ko_menu_item_selector" android:focusable="true" android:nextFocusUp="@id/emu_menu_quit" android:layout_width="@dimen/emu_menu_item_width_882px" android:layout_height="@dimen/emu_menu_item_height_112px" android:layout_marginBottom="@dimen/emu_menu_item_bottom_20px" android:text="@string/ko_continue_game" />
        <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size58px" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/emu_menu_keymaping" android:background="@drawable/ko_menu_item_selector" android:paddingLeft="@dimen/emu_menu_item_paddding_left_60px" android:focusable="true" android:layout_width="@dimen/emu_menu_item_width_882px" android:layout_height="@dimen/emu_menu_item_height_112px" android:layout_marginBottom="@dimen/emu_menu_item_bottom_20px" android:text="@string/ko_keymapping" android:drawableRight="@drawable/ko_ico_arrow_r" />
        <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size58px" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/emu_menu_save" android:background="@drawable/ko_menu_item_selector" android:paddingLeft="@dimen/emu_menu_item_paddding_left_60px" android:focusable="true" android:layout_width="@dimen/emu_menu_item_width_882px" android:layout_height="@dimen/emu_menu_item_height_112px" android:layout_marginBottom="@dimen/emu_menu_item_bottom_20px" android:text="@string/ko_save_archive" android:drawableRight="@drawable/ko_ico_arrow_r" />
        <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size58px" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/emu_menu_load" android:background="@drawable/ko_menu_item_selector" android:paddingLeft="@dimen/emu_menu_item_paddding_left_60px" android:focusable="true" android:layout_width="@dimen/emu_menu_item_width_882px" android:layout_height="@dimen/emu_menu_item_height_112px" android:layout_marginBottom="@dimen/emu_menu_item_bottom_20px" android:text="@string/ko_read_archive" android:drawableRight="@drawable/ko_ico_arrow_r" />
        <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size58px" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/emu_menu_setting" android:background="@drawable/ko_menu_item_selector" android:paddingLeft="@dimen/emu_menu_item_paddding_left_60px" android:focusable="true" android:layout_width="@dimen/emu_menu_item_width_882px" android:layout_height="@dimen/emu_menu_item_height_112px" android:layout_marginBottom="@dimen/emu_menu_item_bottom_20px" android:text="@string/ko_advanced_setting" android:drawableRight="@drawable/ko_ico_arrow_r" />
        <cn.vszone.ko.tv.views.FontEnlargeTextView android:textSize="@dimen/font_size58px" android:textColor="@drawable/ko_prompt_dialog_bt_textcolor_selector" android:gravity="center" android:id="@id/emu_menu_quit" android:background="@drawable/ko_menu_item_selector" android:focusable="true" android:nextFocusDown="@id/emu_menu_continue" android:layout_width="@dimen/emu_menu_item_width_882px" android:layout_height="@dimen/emu_menu_item_height_112px" android:layout_marginBottom="@dimen/emu_menu_item_bottom_20px" android:text="@string/ko_quit_game" />
    </LinearLayout>
    <ImageView android:id="@id/operation_iv_tips" android:layout_width="@dimen/operation_tips_width_358px" android:layout_height="@dimen/operation_tips_height_116px" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/ko_app_name" />
</RelativeLayout>